shared/src/test/data/yeast/invalid-json/incomplete-entry-7.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'k'
Indicator           6,  2,  4 '\"'
EndScalar           7,  2,  5 ''
WhiteSpace          7,  2,  5 ' '
Indicator           8,  2,  6 ','
LineBreak           9,  2,  7 '\n'
WhiteSpace         10,  3,  0 '  '
BeginScalar        12,  3,  2 ''
Indicator          12,  3,  2 '\"'
Text               13,  3,  3 'foo'
Indicator          16,  3,  6 '\"'
EndScalar          17,  3,  7 ''
Indicator          17,  3,  7 ':'
WhiteSpace         18,  3,  8 ' '
BeginScalar        19,  3,  9 ''
Indicator          19,  3,  9 '\"'
Text               20,  3, 10 'bar'
Indicator          23,  3, 13 '\"'
EndScalar          24,  3, 14 ''
LineBreak          24,  3, 14 '\n'
EndMapping         25,  4,  0 '}'
